--- a/client/package.json
+++ b/client/package.json
@@ -27,11 +27,11 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "22.5.5",
-    "@types/react": "18.3.8",
-    "eslint": "^8",
+    "@types/node": "^22.6.1",
+    "@types/react": "^18.3.9",
+    "eslint": "^9.11.1",
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
-    "tailwindcss": "^3.4.12"
+    "tailwindcss": "^3.4.13"
   }
 }
