--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
     "@mui/material": "^6.1.1",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
+    "firebase": "^10.13.2",
+    "jwt-decode": "^4.0.0",
     "material-react-table": "^3.0.1",
     "next": "14.2.13",
     "react": "^18",
@@ -24,6 +26,7 @@
     "redux": "^5.0.1",
     "swiper": "^11.1.14",
     "universal-cookie": "^7.2.0",
+    "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
